# r6v3

./: Cargo.toml  README.md  sqlx-data.json
migrations/: 20220320181927_init.sql
migrations/2022-03-24-140350_create_ts_members/: down.sql  up.sql
migrations/2022-05-31-165503_movie_channels/: down.sql  up.sql
src/: azure.rs  command.rs  conf.rs  config.rs  handler.rs  hook.rs  macros.rs  main.rs  minecraft.rs  movie.rs  owners.rs  permission.rs  schema.rs  sql.rs  ts.rs  voice.rs  worker.rs
src/azure/: authentication.rs  management.rs
src/azure/authentication/: token_store.rs
src/azure/management/: vm.rs  vm_run_cmd.rs
src/command/: ping.rs  start.rs  stop.rs  ts.rs
src/movie/: worker.rs
src/permission/: rbac.rs
src/sql/: model.rs  movie.rs  uuid.rs
