[package]
name = "r6v3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity="0.10"
async-trait="0.1"
azure_core="0.1"
reqwest="0.11"
http="0.2"
serde="1"
openssl="0.10"
base64="0.13"
urlencoding="2"
bytes="1"
chrono="0.4"
oauth2="4"
serde_json="1"
thiserror="1"
log="0.4"
env_logger="0.9"

[dependencies.jwt]
features=["openssl"]
version="0.16"

[dependencies.uuid]
features=["v4"]
version="0.8"

[dependencies.tokio]
features = ["full"]
version="1"

[dependencies.rcon]
features=["rt-tokio"]
version="0.6"