[package]
name = "r6v3"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "symbols"

[dependencies]
serenity = "0.10"
async-trait = "0.1"
azure_core = "0.1"
reqwest = "0.11"
http = "0.2"
serde = "1"
base64 = "0.13"
urlencoding = "2"
bytes = "1"
chrono = "0.4"
oauth2 = "4"
serde_json = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.9"
config = "0.12"
route-recognizer = "0.3"
lazy_static = "1"
futures = "0.3"
dotenvy = "0.15"

[dependencies.jwt]
features = ["openssl"]
version = "0.16"

[dependencies.uuid]
features = ["v4"]
version = "0.8"

[dependencies.tokio]
features = ["full"]
version = "1"

[dependencies.diesel]
features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"]
git = "https://github.com/diesel-rs/diesel"

[dependencies.diesel_migrations]
git = "https://github.com/diesel-rs/diesel"

[dependencies.openssl]
features = ["vendored"]
version = "0.10"

[dependencies.ts3-query]
features = ["managed"]
version = "0.3"
